--- a/TODO.txt
+++ b/TODO.txt
@@ -1,6 +1,6 @@
 +postavljanje okoline 2022.08.08 11:00-14:20
 +kreiranje baze po uzoru na Data model.xlsx 2022.08.08 14:20-21:52
-+Public catalog 2022.08.08 21:52- 2022.08.08 09:10
++Public catalog 2022.08.08 21:52-2022.08.08 23:43, 2022.08.08 07:45 - 2022.08.08 09:10
 	+kreiranje pretraživanje krinjga
 	+kreiranje rpetraživanje autora
 Library management system 
@@ -32,9 +32,11 @@ Library management system
 	
 	kreiranje authentifikacije
 	validacija korisnika kod bilo koje CRUD akcije
-	logiranje poziva apija (koji je korisnik što radio)
 Member dashboard
 	pregled povjesti posudbe
-	kreiranje authentifikacije
+	kreiranje authentifikacije	
+	
+kreirati tablicu sa admin userima i raditi validaciju inserta/edut/deleta preko tih korisnika
+logiranje poziva apija (koji je admin user što radio)
 	
 Napraviti testove
