--- a/TODO.txt
+++ b/TODO.txt
@@ -1,7 +1,8 @@
 +postavljanje okoline 2022.08.08 11:00-14:20
 +kreiranje baze po uzoru na Data model.xlsx 2022.08.08 14:20-21:52
 +Public catalog 2022.08.08 21:52-2022.08.08 23:43, 2022.08.08 07:45 - 2022.08.08 09:10
-	+kreiranje pretraživanje krinjga
+	+kreiranje pretraživanje svih krinjga
+	kreiranje pretraživanje samo slobodnih knjiga
 	+kreiranje rpetraživanje autora
 Library management system 
 	+provjera dostupnih knjiga i autora
@@ -16,24 +17,22 @@ Library management system
 	+editiranje autora
 	+soft brisanje autora
 	
-	pretraživanje membera po useru, imenu, ili prezimenu
-	dodavanje membera
-	editiranje memebera
-	soft brisanje membera
+	+pretraživanje membera po useru, imenu, ili prezimenu
+	+dodavanje membera
+	+editiranje memebera
+	+soft brisanje membera
 	
-	pregled koji vrača samo slobodne knjige (pretraga po dijelu naziva knjige, i/ili autora)
-	posudba knjiga
+	+interni pregled koji vrača samo slobodne knjige (pretraga po dijelu naziva knjige, i/ili autora)
+	+posudba knjiga
 		validacija da li je knjigu moguce posuditi i da li member postoji
-	provjera da li member ima već posuđeno 3, ili više knjiga
-	vračanej knjiga
-		validacija imena knjige i membera
-	storno posudbe
-		validacija imena knjige i membera
+	+provjera da li member ima već posuđeno 3, ili više knjiga
+	+vračanej knjiga
+	+storno posudbe
 	
 	kreiranje authentifikacije
-	validacija korisnika kod bilo koje CRUD akcije
+	
 Member dashboard
-	pregled povjesti posudbe
+	+pregled povjesti posudbe
 	kreiranje authentifikacije	
 	
 kreirati tablicu sa admin userima i raditi validaciju inserta/edut/deleta preko tih korisnika
