--- a/TODO.txt
+++ b/TODO.txt
@@ -4,7 +4,7 @@
 	+kreiranje pretraživanje svih krinjga
 	kreiranje pretraživanje samo slobodnih knjiga
 	+kreiranje rpetraživanje autora
-Library management system 
+Library management system 2022.08.08 09:10 - 2022.08.08 17:30
 	+provjera dostupnih knjiga i autora
 	
 	+pretraživanje po nazivu knjige, ili nazivu autora
@@ -31,7 +31,7 @@ Library management system
 	
 	kreiranje authentifikacije
 	
-Member dashboard
+Member dashboard 2022.08.08 09:10 - 2022.08.08 17:30
 	+pregled povjesti posudbe
 	kreiranje authentifikacije	
 	
