adding FK to creators and modifier

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,11 +1,11 @@
 +postavljanje okoline 2022.08.08 11:00-14:20
 +kreiranje baze po uzoru na Data model.xlsx 2022.08.08 14:20-21:52
-+Public catalog 2022.08.08 21:52-2022.08.08 23:43, 2022.08.08 07:45 - 2022.08.08 09:10
++Public catalog 2022.08.08 21:52-2022.08.08 23:43, 2022.09.08 07:45 - 2022.09.08 09:10
 	+kreiranje pretraživanje svih krinjga
 	kreiranje pretraživanje samo slobodnih knjiga
 	+kreiranje rpetraživanje autora
 
-Library management system 2022.08.08 09:10 - 2022.08.08 18:10
+Library management system 2022.08.09 09:10 - 2022.08.09 18:10
 	+provjera dostupnih knjiga i autora
 	
 	+pretraživanje po nazivu knjige, ili nazivu autora
@@ -25,19 +25,19 @@ Library management system 2022.08.08 09:10 - 2022.08.08 18:10
 	
 	+interni pregled koji vrača samo slobodne knjige (pretraga po dijelu naziva knjige, i/ili autora)
 	+posudba knjiga
-		validacija da li je knjigu moguce posuditi i da li member postoji
+		+validacija da li je knjigu moguce posuditi i da li member postoji
 	+provjera da li member ima već posuđeno 3, ili više knjiga
 	+vračanej knjiga
 	+storno posudbe
 	
-	kreiranje authentifikacije
+	+kreiranje authentifikacije
 	
 
-Member dashboard 2022.08.08 09:10 - 2022.08.08 18:10
++Member dashboard 2022.09.08 09:10 - 2022.09.08 18:10
 	+pregled povjesti posudbe
-	kreiranje authentifikacije	
+	+kreiranje authentifikacije	
 	
-kreirati tablicu sa admin userima i raditi validaciju inserta/edut/deleta preko tih korisnika
++kreirati tablicu sa admin userima i raditi validaciju inserta/edit/deleta preko tih korisnika 2022.09.08 18:10 - 2022.09.08 22:30 2022.10.08 18:10 - 2022.10.08 18:10
 logiranje poziva apija (koji je admin user što radio)
 	
 Napraviti testove
